<resources>
    <string name="app_name">Courier</string>
    <string name="app_description">Courier is a mobile RSS news reader with enhanced security features, offline reading and sharing capability.</string>
    <string name="title_activity_httpd_app_sender">SHARE APP</string>
    <string name="title_activity_import_opml">Import OPML</string>
    <string name="menu_tag">Search by Tag</string>
    <string name="menu_share">Share</string>
    <string name="menu_panic">Panic</string>
    <string name="menu_favorite">Favorite</string>
    <string name="feed_filter_display_photos">Display photos</string>
    <string name="feed_filter_popular">Popular</string>
    <string name="feed_filter_favorites">My Favorites</string>
    <string name="feed_filter_shared_stories">Nearby</string>
    <string name="feed_filter_all_feeds">All Feeds</string>
    <string name="feed_filter_add_new">Manage Feeds</string>
    <string name="feed_share_popup_title">Share feed via</string>
    <string name="story_list_hint_add_favorite_text1">Make a list of your top stories here by tapping "favorite" in a story</string>
    <string name="story_list_hint_add_favorite_text2">Here are some favorites from fellow readers to hold you over:</string>
    <string name="story_list_hint_no_shared_text1">The stories shared with you using Courier’s Nearby are listed here.</string>
    <string name="story_list_hint_no_shared_text2">To receive a share from a friend, go to the ‘Receive a Share’ screen from the side menu.</string>
    <string name="about_guardian_title">About Guardian Project</string>
    <string name="about_guardian_content">The Guardian Project creates easy to use apps, open-source software libraries, operating system modifications, and customized mobile devices useful to any person looking to protect their communications and personal data from unjust intrusion and monitoring. Visit us at https://guardianproject.info</string>
    <string name="help_terms_title">Terms and Licenses</string>
    <string name="help_terms_content">Software licenses and more information available online at: https://guardianproject.info/apps/courier</string>
    <string name="downloads_title">Media Downloads</string>
    <string name="downloads_complete">COMPLETE</string>
    <string name="downloads_in_progress">IN PROGRESS</string>
    <string name="downloads_operation_refresh">REFRESH</string>
    <string name="downloads_operation_cancel">CANCEL</string>
    <string name="menu_share_app">Share App</string>
    <string name="menu_receive_share">Receive a Share</string>
    <string name="menu_tor_connected">Connected to Tor</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_lock_app">Lock App</string>
    <string name="menu_show_full_text">Full story</string>
    <string name="story_item_short_author">By %1s</string>
    <string name="story_item_short_published_never" />
    <string name="story_item_short_published_recently">Now</string>
    <string name="story_item_short_published_minutes">%1$d m</string>
    <string name="story_item_short_published_minute">%1$d m</string>
    <string name="story_item_short_published_hours">%1$d hr</string>
    <string name="story_item_short_published_hour">%1$d hr</string>
    <string name="story_item_short_published_days">%1$d d</string>
    <string name="story_item_short_published_day">%1$d d</string>
    <string name="story_item_short_tag_results">Showing results for ##%1s##</string>
    <string name="story_item_share_popup_title">Share story via</string>
    <string name="story_item_search_by_tag_hint">Search by #tag</string>
    <string name="story_item_read_with_orweb">Read full article</string>
    <string name="error_feed_404">Feed was not found</string>
    <string name="error_feed_bad_url">Feed URL is not valid, please visit "manage feeds" to modify or delete it.</string>
    <string name="error_feed_unknown">Error syncing feed, please try again</string>
    <string name="error_1_feed">Error syncing 1 feed</string>
    <string name="error_n_feeds">Error syncing %1$d feeds</string>
    <string name="panic_settings">Panic Settings</string>
    <string name="panic_hint">Swipe down to delete the app</string>
    <string name="panic_hint_wipe_content">Swipe down to delete personal data</string>
    <string name="panic_test_successful">Good job! In a real scenario, you would have successfully completed a wipe.</string>
    <string name="add_feed_add">Add</string>
    <string name="add_feed_manual_label">Enter RSS Feed URL:</string>
    <string name="add_feed_manual_hint">figandquince.com/feed/</string>
    <string name="add_feed_not_loaded">Feed data not loaded</string>
    <string name="add_feed_error_loading">We were unable to load this feed. Be sure that the RSS feed URL is correct.</string>
    <string name="menu_search">Search</string>
    <string name="add_feed_tab_following">Following</string>
    <string name="add_feed_tab_explore">Explore</string>
    <string name="add_feed_search_no_results">No feeds found</string>
    <string name="settings_panic_wipe_app">Wipe entire app</string>
    <string name="settings_panic_wipe_content">Wipe my content</string>
    <string name="settings_security_change_passphrase">Change password</string>
    <string name="settings_security_enter_passphrase">Enter password</string>
    <string name="settings_security_create_passphrase">Create password</string>
    <string name="settings_security_set_kill_passphrase">Set Kill Password</string>
    <string name="settings_security_set_kill_passphrase_enter">Enter password</string>
    <string name="settings_security_set_kill_passphrase_confirm">Confirm password</string>
    <string name="settings_security_kill_passphrase_same_as_login">You already use this password for login. Please use another password.</string>
    <string name="lock_screen_open">Open</string>
    <string name="lock_screen_create_passphrase">OPEN APP</string>
    <string name="lock_screen_create_passphrase_label">Create a password to protect your information:</string>
    <string name="lock_screen_passphrase_hint"> password</string>
    <string name="lock_screen_passphrase_not_set_enter">Enter new password</string>
    <string name="lock_screen_passphrase_not_set_confirm">Confirm new password</string>
    <string name="lock_screen_passphrases_not_matching">Password did not match, please try again</string>
    <string name="change_passphrase_incorrect">Wrong password</string>
    <string name="change_passphrase_not_matching">Password did not match, please try again</string>
    <string name="change_passphrase_changed">Password changed</string>
    <string name="lock_screen_wrong_password">Oops! Try again.</string>
    <string name="httpd_app_sender_instructions">To locally share the Courier app or the apps supported by it (Orbot and ChatSecure), please take the following steps:</string>
    <string name="httpd_app_sender_sender">To Share</string>
    <string name="httpd_app_sender_sender_title">1. Enable a "Portable WiFi Hotspot"</string>
    <string name="httpd_app_sender_sender_part1">You can enable a hotspot in your phone settings. This is the most secure way to share the app.\n\nIf you cannot enable a hotspot, you can connect to a public wifi network that you trust.</string>
    <string name="httpd_app_sender_receiver">To Receive</string>
    <string name="httpd_app_sender_receiver_part1">2. Join the Portable WiFi Hotspot</string>
    <string name="httpd_app_sender_receiver_part2">If you\'re not using a hotspot, then join the same wifi as your friend sharing the app.</string>
    <string name="httpd_app_sender_receiver_part3">3. Open a web browser to the URL:</string>
    <string name="httpd_app_sender_receiver_part4">Once the web page has loaded, tap the apps you\'d like to install.</string>
    <string name="share_via_secure_bluetooth">Nearby</string>
    <string name="bluetooth_send_title">Choose your friend\'s device:</string>
    <string name="bluetooth_send_info">Your friend must have the Courier app open to the \'Receive a Share\' screen from the side menu.</string>
    <string name="bluetooth_send_scan">Search for more devices&#8230;</string>
    <string name="bluetooth_send_scanning">Searching for devices&#8230;</string>
    <string name="bluetooth_no_devices_found">No Devices Found</string>
    <string name="bluetooth_receive_title">Receive a story or feed from a friend using Courier Nearby.</string>
    <string name="bluetooth_receive_info">Bluetooth is listening.</string>
    <string name="bluetooth_receive_receive">TELL BLUETOOTH TO LISTEN</string>
    <string name="bluetooth_receive_connected">Connected</string>
    <string name="bluetooth_send_connecting">Connecting&#8230;</string>
    <string name="bluetooth_send_connected">Connected</string>
    <string name="bluetooth_send_connect_error">Failed to connect to device</string>
    <string name="bluetooth_send_disconnected">Disconnected</string>
    <string name="bluetooth_send_sent_item">Sent Item</string>
    <string name="bluetooth_send_error">Error Sending Item</string>
    <string name="bluetooth_send_sharing">SHARING&#8230;</string>
    <string name="bluetooth_send_close">CLOSE</string>
    <string name="bluetooth_send_read_now">READ NOW</string>
    <string name="bluetooth_send_success_1_story">Success! 1 story shared.</string>
    <string name="story_list_error_title">Oops! Your feeds are not refreshing.</string>
    <string name="download_epub_hint">Download ePub</string>
    <string name="download_epub_reader_title">Download ePub Reader</string>
    <string name="download_epub_reader_info">You need an ePub reader to see the story. We recommend FBReader. Get it on:</string>
    <string name="download_epub_reader_play">Google Play</string>
    <string name="download_epub_reader_web">FBReader Website</string>
    <string name="download_epub_reader_close">Close</string>
    <string name="onboarding_select_language">Language</string>
    <string name="onboarding_next">Next</string>
    <string name="onboarding_welcome_title">Welcome</string>
    <string name="onboarding_welcome_text">to Courier</string>
    <string name="onboarding_proxy_title">Privacy matters</string>
    <string name="onboarding_proxy_psiphon_info">Access everything on the internet with <b>Psiphon</b>.</string>
    <string name="onboarding_proxy_psiphon_connect">USE PSIPHON</string>
    <string name="onboarding_proxy_psiphon_connected">Connected to Psiphon!</string>
    <string name="onboarding_proxy_tor_info">Access everything and conceal your identity with <b>Tor</b>.</string>
    <string name="onboarding_proxy_tor_connect">USE TOR</string>
    <string name="onboarding_proxy_tor_connected">Connected to Tor!</string>
    <string name="onboarding_proxy_skip">Skip</string>
    <string name="onboarding_proxy_no_net_info">No Connection.</string>
    <string name="onboarding_proxy_no_net_retry">Retry</string>
    <string name="onboarding_curate_feeds_title">Curate your daily feed.</string>
    <string name="feed_category_world_news">World News</string>
    <string name="feed_category_national_news">National News</string>
    <string name="feed_category_arts_culture">Arts &amp; Culture</string>
    <string name="feed_category_business">Business</string>
    <string name="feed_category_sports">Sports</string>
    <string name="feed_category_technology">Technology</string>
    <string name="feed_category_security">Security</string>
    <string name="feed_category_discussion">Discussion</string>
    <string name="feed_category_uncategorized">Uncategorized</string>
    <string name="font_size">Font Size</string>
    <string name="media_loading_video">Loading video</string>
    <string name="import_opml_import">Import selected feeds</string>
    <string name="fetch_full_story">Fetch full story</string>
    <string name="fetch_full_story_queued">Download queued…</string>
    <string name="fetch_full_story_downloading">Downloading…</string>
</resources>