<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llRoot"
    style="@style/OnboardingProxyStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top|center_horizontal"
    android:descendantFocusability="beforeDescendants"
    android:focusable="true"
    android:focusableInTouchMode="true" >

    <LinearLayout
        android:id="@+id/bottomBar"
        style="@style/OnboardingProxyBottomBarStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:gravity="end|end" >

        <Button
            android:id="@+id/btnNotNow"
            style="@style/OnboardingBottomBarTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical|end"
            android:background="@null"
            android:text="@string/onboarding_proxy_skip" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/bottomBar"
        android:layout_alignParentTop="true"
        android:layout_margin="20dp"
        android:orientation="vertical" >

        <TextView
            style="@style/OnboardingProxyTitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_proxy_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <!-- Psiphon -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:baselineAligned="false">

            <RelativeLayout
                android:id="@+id/ivIllustrationPsiphon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >
            </RelativeLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    style="@style/OnboardingProxyContentTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/onboarding_proxy_psiphon_info"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Button
                    android:id="@+id/btnConnectPsiphon"
                    style="@style/OnboardingProxyButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/onboarding_proxy_psiphon_connect" />

            </LinearLayout>
        </LinearLayout>
        
        <!-- Tor -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:baselineAligned="false">

            <RelativeLayout
                android:id="@+id/ivIllustrationTor"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >
            </RelativeLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    style="@style/OnboardingProxyContentTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/onboarding_proxy_tor_info"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Button
                    android:id="@+id/btnConnectTor"
                    style="@style/OnboardingProxyButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/onboarding_proxy_tor_connect" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
